--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Open+Sans">
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Poppins">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
 </head>
@@ -30,6 +31,12 @@
 
   <button>Register</button>
 </main>
+</div>
+
+<div class="icons">
+<i class="fa-brands fa fa-twitter"></i>
+<i class="fa-brands fa fa-instagram"></i>
+<i class="fa fa-facebook-f"></i>
 </div>
 
   <footer>
