--- a/index.html
+++ b/index.html
@@ -6,22 +6,20 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="https://fonts.google.com/specimen/Open+Sans">
-  <link rel="stylesheet" href="https://fonts.google.com/specimen/Poppins">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
 </head>
 <body>
-  <header><img class="logo" src="images/logo.svg" alt="Logo"></header>
+  <header>
+    <img class="logo" src="images/logo.svg" alt="Logo">
+  </header>
 
-  <picture>
-    <source media="(min-width:769px)" srcset="images/bg-desktop.svg"/>
-    <source media="(max-width:768px)" srcset="images/bg-mobile.svg" />
-    <img src="images/bg-mobile.svg" alt="bg">
-  </picture>
 <div class="wrapper" >
-  <img class="pic" src="images/illustration-mockups.svg" alt="illustration-mockups">
+
+  <figure>
+    <img class="pic" src="images/illustration-mockups.svg" alt="illustration-mockups">
+  </figure>
 
 <main>
   <h2>Build The Community Your Fans Will Love</h2>
@@ -31,6 +29,7 @@
 
   <button>Register</button>
 </main>
+
 </div>
 
 <div class="icons">
@@ -42,7 +41,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Denito37</a>.
     </p>
   </footer>
 </body>
